tests/ui/invalid_pyfunction_argument.stderr
error[E0599]: the method `extract_argument` exists for struct `TypeExtractor<AtomicPtr<()>>`, but its trait bounds were not satisfied
 --> tests/ui/invalid_pyfunction_argument.rs:5:37
  |
5 | fn invalid_pyfunction_argument(arg: AtomicPtr<()>) {
  |                                     ^^^^^^^^^
  |
 ::: $RUST/core/src/sync/atomic.rs
  |
  | pub struct AtomicPtr<T> {
  | ----------------------- doesn't satisfy 5 bounds
  |
  = note: the following trait bounds were not satisfied:
          `AtomicPtr<()>: PyFunctionArgument<'_, '_, false>`
          `AtomicPtr<()>: PyClass`
          which is required by `AtomicPtr<()>: FromPyObject<'_, '_>`
          `AtomicPtr<()>: Clone`
          which is required by `AtomicPtr<()>: FromPyObject<'_, '_>`
          `AtomicPtr<()>: ExtractPyClassWithClone`
          which is required by `AtomicPtr<()>: FromPyObject<'_, '_>`

error[E0599]: the method `extract_argument` exists for struct `TypeExtractor<Foo>`, but its trait bounds were not satisfied
  --> tests/ui/invalid_pyfunction_argument.rs:14:59
   |
11 | struct Foo;
   | ---------- doesn't satisfy `Foo: ExtractPyClassWithClone`, `Foo: FromPyObject<'_, '_>` or `Foo: PyFunctionArgument<'_, '_, false>`
...
14 | fn skip_from_py_object_without_custom_from_py_object(arg: Foo) {
   |                                                           ^^^
   |
   = note: the following trait bounds were not satisfied:
           `Foo: PyFunctionArgument<'_, '_, false>`
           `Foo: ExtractPyClassWithClone`
           which is required by `Foo: FromPyObject<'_, '_>`
note: the traits `ExtractPyClassWithClone` and `PyFunctionArgument` must be implemented
  --> src/impl_/pyclass.rs
   |
   |   pub trait ExtractPyClassWithClone {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: src/impl_/extract_argument.rs
   |
   | / pub trait PyFunctionArgument<'a, 'py, const IMPLEMENTS_FROMPYOBJECT: bool>:
   | |     Sized + function_argument::Sealed<IMPLEMENTS_FROMPYOBJECT>
   | |______________________________________________________________^
